--- a/public/paragraph-image.html
+++ b/public/paragraph-image.html
@@ -4,17 +4,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Responsive Paragraph and Image</title> 
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap'); /* Import Roboto font */
+
 .container {
   display: flex;
   flex-direction: column; 
   align-items: center; 
   width: 100%; 
   justify-content: center; 
+  font-family: 'Roboto', sans-serif;  /* Apply Roboto font */
+  font-size: 18px; /* Increased font size */
+  color: #2d2d2d; /* Very dark gray font color */
 }
 
 .container > div {
-  padding: 16px;
-  margin: 4px; 
   box-sizing: border-box; 
   display: flex; 
   flex-direction: column; 
@@ -27,9 +30,9 @@
   object-fit: contain; 
 }
 
-.container > div:first-child {
+.container > div:first-child { /* Style the paragraph text */
   text-align: left; 
-  font-size: 24px;
+  margin-top: 0px; /* Reset top margin */
 }
 
 /* Medium and large screens: 50% width, side-by-side */
@@ -38,10 +41,14 @@
     flex-direction: row;
   }
   .container > div {
-    width: 50%; 
+    width: 50%;
   }
   #image-div { 
-    height: 100%; 
+    height: 100%;
+    padding-inline: 4px;
+  }
+  #text-div {
+    padding-inline: 4px;
   }
   .container img {
     height: 100%;
