--- a/public/card-layout.html
+++ b/public/card-layout.html
@@ -12,7 +12,8 @@
   justify-content: center;
   max-width: 800px;
   margin: 0 auto;
-  gap: 10px; 
+  gap: 10px;
+  padding: 8px;
 }
 
 .card {
@@ -22,13 +23,15 @@
   font-family: 'Roboto', sans-serif; 
   font-size: 18px;
   color: #2d2d2d; /* Very dark gray font color */
+  padding-bottom: 16px;
 }
 
 .card img {
   width: 100%; 
-  aspect-ratio: 6/7; 
-  object-fit: cover; 
-  display: block; 
+  aspect-ratio: 6/7;
+  border-radius: 8px;
+  object-fit: cover;
+  display: block;
   margin: 0 auto 0px auto; 
 }
 
@@ -39,7 +42,7 @@
 
 .card p {
   margin-top: 0px;
-  margin-bottom: 16px;
+  margin-bottom: 12px;
 }
 
 .card a { 
