--- a/public/card-layout.html
+++ b/public/card-layout.html
@@ -6,11 +6,20 @@
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+:root {
+  --color: #000000;
+  --background-color:   #eeeeee;
+}
+
+body {
+  background-color: var(--background-color);
+}
+
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   justify-content: center;
-  max-width: 800px;
+  max-width: 1600px;
   margin: 0 auto;
   gap: 10px;
   padding: 8px;
@@ -22,13 +31,13 @@
   flex-direction: column;
   font-family: 'Roboto', sans-serif; 
   font-size: 18px;
-  color: #2d2d2d; /* Very dark gray font color */
+  color: var(--color);
   padding-bottom: 16px;
 }
 
 .card img {
   width: 100%; 
-  aspect-ratio: 6/7;
+  aspect-ratio: 3/4;
   border-radius: 8px;
   object-fit: cover;
   display: block;
