--- a/public/paragraph-image.html
+++ b/public/paragraph-image.html
@@ -47,9 +47,16 @@ body {
   margin-top: 0px;
 }
 
+#text-div h1 {
+    margin-top: 8px;
+    margin-bottom: 32px;
+    font-size: 3em;
+}
+
 #text-div p {
   margin-top: 0px;
   margin-bottom: 0px;
+  min-height: 148px;
 }
 
 .spacer {
