--- a/public/hero.html
+++ b/public/hero.html
@@ -174,7 +174,18 @@
 
     .project-container .section-header {
       grid-column: 1 / -1;
-      margin-bottom: 16px;
+      margin-top: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .project-container .section-header h2 {
+      width: 50%;
+    }
+
+    .project-container .section-header p {
+      width: 50%;
     }
 
     .card {
@@ -262,8 +273,10 @@
   </script>
   <div class="project-container">
     <div class="section-header">
-      <h2>Projects</h2>This is a section header. It spans the full row. This contains a paragraph of text that might
-      span multiple lines.
+      <h2>Projects</h2>
+      <div class="hero-spacer"></div>
+      <p>This is a section header. It spans the full row. This contains a paragraph of text that might
+        span multiple lines.</p>
     </div>
     <div class="card"><img src="a_bridge.jpg" alt="Image 1">
       <h2>Card Title 1</h2>
