--- a/public/hero.html
+++ b/public/hero.html
@@ -36,11 +36,17 @@
     .header {
       width: 100%;
       padding-bottom: 32px;
+      position: relative;
       background-color: var(--background-color);
-      color: var(--color);
       display: flex;
       justify-content: space-between;
       align-items: center;
+    }
+
+    .header-content {
+      transition: color 0.3s ease;
+      color: var(--color);
+      z-index: 2;
     }
 
     h1 {
@@ -57,17 +63,17 @@
 
     .header h1 a {
       text-decoration: none;
-      color: var(--color);
+      color: inherit;
     }
 
     .nav-links {
       display: flex;
-      gap: 20px;
+      gap: 24px;
     }
 
     .nav-links a {
       text-decoration: none;
-      color: var(--color-link);
+      color: inherit;
     }
 
     .menu-icon {
@@ -84,28 +90,74 @@
       width: 100%;
       height: 100%;
       background-color: var(--background-color-overlay);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .overlay.show {
+      display: block;
+      opacity: 1;
+      transition: opacity 1s ease;
+      transition: block 1s ease;
     }
 
     .overlay-content {
       position: absolute;
-      top: 0%;
-      left: 50%;
-      transform: translate(-50%, 88px);
-      min-width: 50%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       text-align: center;
       background-color: white;
-      padding: 8px;
+      padding-top: 88px;
       border-radius: 4px;
+      z-index: 1;
     }
 
     .overlay .nav-links {
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 16px;
     }
 
     .overlay .nav-links a {
       color: var(--color-overlay);
+    }
+
+    .menu-button-container {
+      --menu-icon-size: 36px;
+      /* Renamed from --icon-size */
+      width: var(--menu-icon-size);
+      height: var(--menu-icon-size);
+      cursor: pointer;
+      position: relative;
+    }
+
+    .line {
+      background-color: var(--color);
+      height: calc(var(--menu-icon-size) * 3 / 40);
+      width: 100%;
+      position: absolute;
+      left: 0;
+      transition: transform 0.3s ease, top 0.3s ease;
+    }
+
+    .hamburger-top {
+      top: calc(50% - (var(--menu-icon-size) * 4 / 40));
+    }
+
+    .hamburger-bottom {
+      top: calc(50% + (var(--menu-icon-size) * 4 / 40));
+    }
+
+    .menu-button-container.menu-mode .hamburger-top {
+      transform: rotate(135deg);
+      top: 50%;
+    }
+
+    .menu-button-container.menu-mode .hamburger-bottom {
+      transform: rotate(-135deg);
+      top: 50%;
     }
 
     .hero-container {
@@ -123,7 +175,7 @@
       justify-content: center;
       width: 50%;
     }
-    
+
     #hero-img {
       height: 50%;
     }
@@ -137,9 +189,6 @@
     #hero-text {
       text-align: left;
       margin-top: 0px;
-    }
-
-    #hero-text h1 {
     }
 
     #hero-text p {
@@ -157,7 +206,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       justify-content: center;
-      gap: 8px;
+      gap: 16px;
     }
 
     .project-container .section-header {
@@ -255,26 +304,69 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>
-        <a href="">My Website</a>
-      </h1>
-      <div class="nav-links">
-        <a href="#">About</a>
-        <a href="#">Projects</a>
+      <div class="header-content">
+        <h1 id="header-title"><a href="">My Website</a></h1>
       </div>
-      <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-    </div>
-    <div class="overlay" id="overlay">
-      <div class="overlay-content">
-        <div class="nav-links">
-          <a href="#" onclick="toggleMenu()">About</a>
-          <a href="#" onclick="toggleMenu()">Projects</a>
+      <div class="nav-links header-content">
+        <a href="#">
+          <h2><u>About</u></h2>
+        </a>
+        <a href="#">
+          <h2>Projects</h2>
+        </a>
+      </div>
+      <div class="menu-icon header-content" onclick="toggleMenu()">
+        <div class="menu-button-container">
+          <div class="line hamburger-top"></div>
+          <div class="line hamburger-bottom"></div>
         </div>
       </div>
     </div>
+
+    <div class="overlay" id="overlay" onclick="toggleMenu()">
+      <div class="overlay-content">
+        <div class="nav-links">
+          <a href="#" onclick="toggleMenu()">
+            <h1><u>About</u></h1>
+          </a>
+          <a href="#" onclick="toggleMenu()">
+            <h1>Projects</h1>
+          </a>
+        </div>
+      </div>
+    </div>
+
     <script>
-      function toggleMenu() { var overlay = document.getElementById("overlay"); overlay.style.display = overlay.style.display === "block" ? "none" : "block"; } 1
-      window.addEventListener('click', function (event) { var overlay = document.getElementById("overlay"); if (event.target == overlay) { overlay.style.display = "none"; } });
+      function toggleMenu() {
+        const overlay = document.getElementById("overlay");
+        const headerContent = document.querySelectorAll(".header-content");
+
+        overlay.classList.toggle("show");
+
+        const menuButton = document.querySelectorAll(".menu-button-container");
+        menuButton.forEach(element => {
+          element.classList.toggle("menu-mode");
+        });
+
+        if (overlay.classList.contains("show")) {
+          headerContent.forEach(element => {
+            element.style.color = "var(--color-overlay)";
+            element.querySelectorAll('.line').forEach(line => line.style.backgroundColor = "var(--color-overlay)");
+          });
+        } else {
+          headerContent.forEach(element => {
+            element.style.color = "";
+            element.querySelectorAll('.line').forEach(line => line.style.backgroundColor = "");
+          });
+        }
+      }
+
+      window.addEventListener('click', function (event) {
+        var overlay = document.getElementById("overlay");
+        if (event.target == overlay) {
+          overlay.style.display = "none";
+        }
+      });
     </script>
     <div class="hero-container">
       <div id="hero-text" class="hero">
@@ -290,10 +382,10 @@
       <div id="hero-img" class="hero"><img src="c_bridge.jpg" alt="Your Image"></div>
     </div>
     <script>
-      function adjustHeroImgHeight() { 
+      function adjustHeroImgHeight() {
         const textDiv = document.getElementById('hero-text');
         const imageDiv = document.getElementById('hero-img');
-        if (window.innerWidth >= 600) { 
+        if (window.innerWidth >= 600) {
           imageDiv.style.height = textDiv.offsetHeight + 'px';
         } else {
           imageDiv.style.height = 'auto';
