--- a/public/hero.html
+++ b/public/hero.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#263551">
+  <link rel="manifest" href="/manifest.json">
   <title>Responsive Layout Examples</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
