Update garage-privacy-policy.html with link to Play Store

--- a/public/garage-privacy-policy.html
+++ b/public/garage-privacy-policy.html
@@ -11,6 +11,8 @@
 
   <p><strong>Important Note:</strong> This app is designed for private use by the author (Christopher Cartland) and individuals specifically granted access. If you have come across this app accidentally, please delete it.</p>
 
+  <p>You can find the app on the Google Play Store here: <a href="https://play.google.com/store/apps/details?id=com.chriscartland.garage">Garage on Google Play</a>. This link should only be accessed by those who have been given express permission by the author.</p>
+
   <h2>Information We Collect</h2>
 
   <p>We may collect the following information:</p>
