--- a/public/projects.html
+++ b/public/projects.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Christopher Cartland</title>
+  <link rel="canonical" href="https://cartland-dev.web.app/projects.html">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
 
