--- a/public/projects.html
+++ b/public/projects.html
@@ -434,6 +434,9 @@
       function adjustHeroImgHeight() {
         const textDiv = document.getElementById('hero-text');
         const imageDiv = document.getElementById('hero-img');
+        if (!textDiv || !imageDiv) {
+          return;
+        }
         if (window.innerWidth >= 600) {
           imageDiv.style.height = textDiv.offsetHeight + 'px';
         } else {
@@ -441,7 +444,7 @@
         }
       }
       window.addEventListener('load', adjustHeroImgHeight);
-      window.FaddEventListener('resize', adjustHeroImgHeight);
+      window.addEventListener('resize', adjustHeroImgHeight);
     </script>
     <div class="project-container">
       <div class="section-header">
