Project sections become columns on small windows

--- a/public/projects.html
+++ b/public/projects.html
@@ -333,6 +333,14 @@
         grid-template-columns: 1fr;
       }
 
+      .project-container .section-header {
+        display: block;
+      }
+
+      .project-container .section-header .half {
+        width: 100%;
+      }
+
       .social-container {
         grid-template-columns: repeat(2, 1fr);
       }
